# outlook-auto

./: .gitignore  Cargo.toml  README.md
src/: application.rs  lib.rs  main.rs  mod.rs
src/application/: mod.rs
src/common/: dispatch.rs  mod.rs  variant.rs
src/outlook/: mod.rs
