[package]
name = "outlook-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
once_cell = "1.19.0"
windows = {version = "0.53.0", features = ["Win32_System_Variant",
    "Win32_System_Com", 
    "Win32_UI_Shell", 
    "Win32_System_Ole", 
    "ApplicationModel_Email", 
    "Win32_System_AddressBook"
]}
