[package]
name = "outlook-auto"
version = "0.1.1"
edition = "2021"

license = "Apache-2.0"

description = "Outlook automation through windows COM"
repository = "https://github.com/kirlu1/outlook-auto"

authors = ["Ulrik Hansen <ulnedhan@gmail.com"]
keywords = ["automation", "outlook", "email"]

[dependencies]
once_cell = "1.19.0"
windows = {version = "0.54.0", features = ["Win32_System_Variant",
    "Win32_System_Com", 
    "Win32_System_Ole",
]}
